# LIWO-kansen-db

./: .pre-commit-config.yaml  README.md  bestanden.qgz  kansendatabase.ipynb  kansendb.qgz  opzet_kansendatabase_vanuit_LIWO.ipynb  pyproject.toml  verschillen_kansendb_LIWO.ipynb
data/output_aanpassingen_db/: kansendatabase_doorbraak_locaties_primair.geojson
init_vanuit_liwo/: opzet_kansendatabase_vanuit_LIWO.ipynb
init_vanuit_liwo/output_kansen_db_liwo/: kansendatabase_doorbraak_locaties_regionaal.geojson
input/Dijkringen/: geo_infrastructuur_dijkringen.dbf  geo_infrastructuur_dijkringen.shx
input/Doorbraaklocaties/: geo_gebiedsindeling_doorbraaklocaties_regionaal.dbf  geo_gebiedsindeling_doorbraaklocaties_regionaal.shx
input/Geometrie_voor_Traject_#35-3/: Normtrajecten_trajectdelen_v26092022.shx
input/Niet_primaire_keringen/: geo_infrastructuur_niet_primaire_keringen.shx
input/Primaire_keringen/: geo_infrastructuur_primaire_keringen.shx
input_aanpassingen_db/: kansendatabase_nieuw.gpkg-wal
input_kansen_db_liwo/: scenariolist.xlsx
input_kansen_db_liwo/Doorbraaklocaties/: geo_gebiedsindeling_doorbraaklocaties_primair.dbf  geo_gebiedsindeling_doorbraaklocaties_primair.shp  geo_gebiedsindeling_doorbraaklocaties_primair.shx  geo_gebiedsindeling_doorbraaklocaties_regionaal.shp
logbooks/: logboek_2026_03_13_change_columns_names.md  logboek_2026_03_13_test.md
output/: kansendatabase_dijkringen.geojson  kansendatabase_doorbraak_locaties_primair.geojson  kansendatabase_doorbraak_locaties_regionaal.geojson
scripts/: verschillen_kansendb_LIWO.ipynb
(+5 files in other folders)
